# python-fastapi-enterprise-app

UserService/: .gitignore  .python-version  Dockerfile.dev  README.md  docker-compose.yaml  pyproject.toml
UserService/src/: dependencies.py  exceptions.py  logging_config.py  main.py
UserService/src/db/: db_context.py  factory.py  settings.py
UserService/src/middleware/: transaction_context.py  transaction_id_middleware.py
UserService/src/repository/implementations/PostgreSQL/: UserRepositoryPostgres.py
UserService/src/repository/implementations/PostgreSQL/models/: UserORM.py
UserService/src/repository/interfaces/: UserRepositoryInterface.py
UserService/src/repository/services/: UserService.py
UserService/src/repository/utils/: UserPasswordManager.py
UserService/src/routes/: UserController.py
UserService/src/schemas/: UserSchema.py
